# aedb

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
benches/: baselines.json  perf.rs  scale.rs
crates/aedb-orderbook/: Cargo.toml
crates/aedb-orderbook/src/: lib.rs
crates/aedb-orderbook/tests/: adversarial_slo_sla.rs  chaos_ci_profile.rs  correctness_matrix.rs  property_randomized_matrix.rs  simulation_smoke.rs
docs/: 2026-05-07-perf-investigation.md  AEDB_MIGRATION_SYSTEM.md  AEDB_SDK_PROCESSOR_MACRO_SPEC.md  ARCANA_D9_D10_D13_API_SKETCH.md  ARCHITECTURE_BOUNDARIES.md  AUTHORIZATION_MODEL.md  COMMIT_SEQUENCING.md  DURABLE_QUEUE_AND_LEASE.md  EVENT_AND_EFFECT_PRIMITIVES.md  HYBRID_STORAGE_ROADMAP.md  PERSISTENCE_COMPATIBILITY.md  PRODUCTION_READINESS.md  PRODUCTION_USAGE_EXAMPLES.md  SECURITY_ACCEPTANCE_CRITERIA.md  SECURITY_OPERATIONS_RUNBOOK.md
examples/: cpu_profile.rs  event_effect_primitives.rs  heap_profile.rs  ram_probe.rs
scripts/: benchmark_gate.sh  correctness_gate.sh  permissions_v2_smoke.sh  production_readiness_gate.sh  run_orderbook_realism_docker.sh  security_gate.sh  supply_chain_gate.sh
src/: backup_chain.rs  config.rs  config_validation.rs  ddl_lifecycle.rs  declarative.rs  engine_interface.rs  error.rs  faults.rs  faults_tests.rs  lib.rs  lib_helpers.rs  lib_tests.rs  locks.rs  locks_tests.rs  offline.rs  open_support.rs  order_book.rs  permission.rs  preflight_commit.rs  query_authorization.rs  query_cursor.rs  query_runtime.rs  repository.rs  sync_bridge.rs  table_mutation.rs  trust_mode.rs  version_store.rs
tests/: accumulator_native.rs  adversarial_contention.rs  audit_regressions.rs  backup_restore.rs  benchmark_gate.rs  cas_helpers.rs  casino_betting_races.rs  casino_double_spend.rs  casino_settlement.rs  cold_row_tiering.rs  crash_matrix.rs  declarative_schema.rs  dir_lock.rs  durable_queue.rs  engine_interface.rs  fault_injection.rs  index_segment_tiering.rs  kv_projection.rs  (+25 more)
(+152 files in other folders)
