[package]
name = "aedb"
version = "0.1.2"
edition = "2024"
description = "Embedded Rust storage engine with transactional commits, WAL durability, and snapshot-consistent reads"
license = "MIT OR Apache-2.0"
repository = "https://github.com/empyrealapp/aedb"
homepage = "https://github.com/empyrealapp/aedb"
documentation = "https://docs.rs/aedb"
readme = "README.md"
keywords = ["database", "storage", "wal", "embedded", "transactional"]
categories = ["database-implementations", "embedded"]
exclude = [
    "*.docx",
    "artifacts/*",
    ".claude/*",
    ".github/*",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
crc32c = "0.6"
blake3 = "1"
sha2 = "0.10"
hex = "0.4"
zstd = "0.13"
im = { version = "15", features = ["serde"] }
crossbeam = "0.8"
parking_lot = "0.12"
memmap2 = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
bytes = "1"
primitive-types = "0.12"
serde_bytes = "0.11"
aes-gcm = "0.10"
hmac = "0.12"
zeroize = { version = "1", features = ["zeroize_derive"] }
lru = "0.12"
once_cell = "1"
smallvec = { version = "1", features = ["serde"] }
compact_str = { version = "0.8", features = ["serde"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["test-util", "macros"] }
rand = "0.8"

[[bench]]
name = "perf"
harness = false
