[package]
name = "aedb-orderbook"
version = "0.1.0"
edition = "2024"
description = "Order book simulation and stress utilities for AEDB"
license = "MIT OR Apache-2.0"

[dependencies]
aedb = { path = "../.." }
rand = "0.8"
primitive-types = "0.12"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
